resource/webapp.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
     app: frontend
spec:
  containers:
   - name: webapp
     image: pramodmadhavan/webapp:BUILD_NUMBER
     ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: webapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
  type: NodePort
