resource/ingres-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: default
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: webapptestyaml.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp
            port:
              number: 80
