resource/ingres-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - webapptestyaml.com
    secretName: hello-app-tls
  rules:
  - host: "webapptestyaml.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: webapp
              port:
                number: 80
