resource/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp
  labels:
    app: webapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: webapp.com
    http:
      paths:
      - backend:
          serviceName: webapp
          servicePort: 80
